    (string->symbol "-sym") instead

  - Remove SIOD-compatible external representation of eof value '(eof)'

  - (scm_set_lib_path): Change to holding copied library path string

  - (scm_return_value): Removed

  - Change the low-level port API to fix the design error about error handling
    (get_byte() and peek_byte() were not able to detect read error)

* Fixes

  - Fix potential SEGV on long string parsing

  - Fix possible crash on parsing R5RS-reserved chars |[]{}

  - Fix broken GC on systems that have 8-byte aligned malloc(3) such as Cygwin

  - Fix possible crash on parsing script prelude longer than 64 chars

  - Fix possible crash on parsing script prelude that only has
    "#! /usr/bin/env"

  - Fix a broken error handling on character encoding switching when
    !SCM_USE_MULTIBYTE_CHAR

  - Fix infinite loop on raising error objects that contain circular list when
    SCM_USE_HYGIENIC_MACRO

  - [R5RS] Fix invalid acceptance of definition form on where neither toplevel
    nor internal definition is allowed

  - [R5RS] Fix invalid acceptance of 'begin' that contains definitions and
    expressions intermixed

  - [R5RS] Fix invalid acceptance of <body> that contains definitions and
    expressions intermixed on 'let', 'let*', 'letrec' and function form
    'define'

  - [R5RS] Fix invalid no-expressions <body> acceptance of 'let', 'let*',
    'letrec' and function form 'define'

  - [R5RS] Fix invalid acceptance of binding syntactic keyword as value on
    'define', 'let', 'let*', 'letrec' and 'do'

  - [R5RS] Fix broken per-iteration env isolation of 'do'

  - [R5RS] Fix proper tail recursion incapability of '=>' form of 'cond'

  - [R5RS] Fix invalid acceptance of cond-like '=>' form of 'case' which is not
    defined in R5RS

  - [R5RS] Fix broken result of 'modulo' on no-remainder cases

  - [R5RS] Fix improper list acceptance on single-arg map

  - [R5RS] Fix improper tail recursion of call-with-values on a corner case
