@@ -211,4 +211,8 @@
 /* SCM_DEBUG requires SCM_USE_FORMAT */
 /* SCM_DEBUG_BACKTRACE_VAL requires SCM_USE_FORMAT */
 
+/* FIXME: detect on configure */
+#define HAVE_REFERENCEABLE_PASSED_VA_LIST 1
+#define HAVE_AUTOREFERRED_PASSED_VA_LIST  0
+
 #endif /* __SIGSCHEME_CONFIG_OLD_H */
