@@ -48,6 +48,8 @@ Overview of changes from 0.6.1 to 0.7.0
 
 * Fixes
 
+  - Fix crashes by broken va_list passing of format.c on x86_64 platform
+
   - Fix potential SEGV on long string parsing
 
   - Fix possible crash on parsing R5RS-reserved chars |[]{}
